# AI-training

./: README.md
1.REX_EXAM/IP_CAMREA/: CMakeLists.txt  rk_build.sh
1.REX_EXAM/IP_CAMREA/common/libs/curl/: libcurl.la
1.REX_EXAM/IP_CAMREA/common/libs/ffmpeg/: libavutil.so.56  libcrypto.so.1.0.0  libpng16.so.16  librockchip_mpp.so.1  libssl.so.1.0.0  libswresample.so.3  libz.so.1
1.REX_EXAM/IP_CAMREA/modules/ptz-control/src/: ptz_control.cpp
1.REX_EXAM/IP_CAMREA/modules/rtsp-ffmpeg/include/: rtsp_ffmpeg.hpp
1.REX_EXAM/IP_CAMREA/modules/rtsp-ffmpeg/src/: rtsp_ffmpeg.cpp
1.REX_EXAM/IP_CAMREA/ptz_request/: pan_right.xml  stop.xml  tilt_down.xml
1.REX_EXAM/SENSOR_BOARD/: .Makefile.swp  README.md
IP_CAMREA/: .gitignore  README.md
IP_CAMREA/common/libs/curl/pkgconfig/: libcurl.pc
IP_CAMREA/common/libs/ffmpeg/: libasound.la  libfreetype.so.6
IP_CAMREA/modules/ptz-control/include/: ptz_control.hpp
IP_CAMREA/modules/rex-display/include/: rex_display.hpp
IP_CAMREA/modules/rex-display/src/: rex_display.cpp
IP_CAMREA/ptz_request/: pan_left.xml  tilt_up.xml
IP_CAMREA/src/: main.cpp
REX_IMAGE/: update.img
REX_IMAGE/SDDiskTool_v1.56/SDDiskTool_v1.56/Log/: AppLog2020-04-17.txt
